[tool.poetry]
name = "nayose"
version = "0.1.0"
description = ""
authors = [
    "sonesuke <iamsonesuke@gmail.com>"
]

license = "MIT"
readme = "README.rst"

repository = "https://github.com/sonesuke/nayose"
homepage = "https://github.com/sonesuke/nayose"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flake8 = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
