[tool.poetry]
name = "nayose"
version = "0.1.3"
description = ""
authors = [
    "sonesuke <iamsonesuke@gmail.com>"
]

license = "MIT"
readme = "README.rst"

repository = "https://github.com/sonesuke/nayose"
homepage = "https://github.com/sonesuke/nayose"

[tool.poetry.dependencies]
python = "^3.7"
feather-format = "^0.4.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flake8 = "^1.0.4"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
