[tool.poetry]
name = "nayose"
version = "0.1.6" # refresh automatically by build.sh
description = "nayose is a Python module for data cleansing for Japanese address and is distributed under the MIT license."
authors = [
    "sonesuke <iamsonesuke@gmail.com>"
]

license = "MIT"
readme = "README.md"

repository = "https://github.com/sonesuke/nayose"
homepage = "https://github.com/sonesuke/nayose"

[tool.poetry.dependencies]
python = "^3.7.10"
feather-format = "^0.4.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
ipython = "^7.13.0"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
flake8-docstrings = "^1.5.0"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
pysen = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = ["error", "ignore::UserWarning"]
addopts = "--cov-report term-missing --cov=nayose --cov-fail-under=100"
testpaths = [
    "tests"
]

[tool.pysen]
version = "0.9.1"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py37"
isort_known_third_party = ["numpy", "pandas", "feather-format"]
isort_known_first_party = ["nayose"]
mypy_path = ["."]

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[tool.pysen.lint.mypy_modules."pandas"]
ignore_errors = true

[tool.pysen.lint.mypy_modules."feather-format"]
ignore_errors = true